# Credora-agentic-MCP

./: .env.example  README.md  main.py  pyproject.toml
credora/: __init__.py  config.py  errors.py  examples.py  logging.py  security.py
credora/agents/: __init__.py  analytics.py  base.py  cfo.py  competitor.py  data_fetcher.py  insight.py  onboarding.py
credora/mcp_servers/: __init__.py  base.py  connection_manager.py  errors.py  google_ads.py  google_ads_client.py  logging.py  meta_ads.py  meta_ads_client.py  oauth.py  run_base.py  run_google_ads.py  run_meta_ads.py  run_shopify.py  shopify.py  shopify_client.py  token_store.py
credora/mcp_servers/models/: __init__.py  google_ads.py  meta_ads.py  oauth.py  shopify.py
credora/models/: __init__.py
credora/state/: __init__.py
credora/tools/: __init__.py  analytics.py  cfo.py  competitor.py  connection.py  data_fetcher.py  insight.py  mcp_router.py  onboarding.py
tests/: __init__.py
tests/property/: test_authorization_properties.py  test_competitor_isolation_properties.py  test_connection_properties.py  test_date_range_filtering_properties.py  test_error_handling_properties.py  test_error_resilience_properties.py  test_https_enforcement_properties.py  test_insight_properties.py  test_logging_properties.py  test_mcp_server_properties.py  test_oauth_properties.py  test_onboarding_properties.py  test_routing_properties.py  test_security_properties.py  test_state_properties.py  test_token_refresh_properties.py  test_token_store_properties.py  test_tool_determinism_properties.py  test_tool_logging_properties.py
